<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40"
                android:src="@drawable/light"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome"
                style="@style/big_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:text="@string/welcome"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/light" />

            <TextView
                android:id="@+id/invitation"
                style="@style/default_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/invitation"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <TextView
                android:id="@+id/name_label"
                style="@style/sign_up_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_3"
                android:text="@string/name_text_hint"
                app:layout_constraintBottom_toTopOf="@+id/name_input"
                app:layout_constraintEnd_toEndOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="@+id/name_input" />

            <EditText
                android:id="@+id/name_input"
                style="@style/edit_text_hint"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/margin_54"
                android:background="@drawable/edit_text_wrong"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/invitation" />

            <TextView
                android:id="@+id/email_label"
                style="@style/sign_up_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_3"
                android:text="@string/email_text_hint"
                app:layout_constraintBottom_toTopOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="@+id/email_input"
                app:layout_constraintStart_toStartOf="@+id/email_input" />

            <EditText
                android:id="@+id/email_input"
                style="@style/edit_text_hint"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/margin_40"
                android:background="@drawable/edit_text_wrong"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/name_input" />

            <TextView
                android:id="@+id/password_label"
                style="@style/sign_up_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_3"
                android:text="@string/password_text_hint"
                app:layout_constraintBottom_toTopOf="@+id/password_input"
                app:layout_constraintEnd_toEndOf="@+id/password_input"
                app:layout_constraintStart_toStartOf="@+id/password_input" />

            <EditText
                android:id="@+id/password_input"
                style="@style/edit_text_hint"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/margin_40"
                android:background="@drawable/edit_text_wrong"
                android:inputType="textPassword"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/email_input" />

            <TextView
                android:id="@+id/repeat_password_label"
                style="@style/sign_up_input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_3"
                android:text="@string/repeat_password_text_hint"
                app:layout_constraintBottom_toTopOf="@+id/repeat_password_input"
                app:layout_constraintEnd_toEndOf="@+id/repeat_password_input"
                app:layout_constraintStart_toStartOf="@+id/repeat_password_input" />

            <EditText
                android:id="@+id/repeat_password_input"
                style="@style/edit_text_hint"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/margin_40"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_wrong"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/password_input" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_btn"
                style="@style/confirm_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/margin_40"
                android:background="@drawable/confirm_button"
                android:text="@string/btn_sign_up"
                app:layout_constraintEnd_toEndOf="@+id/repeat_password_input"
                app:layout_constraintStart_toStartOf="@+id/repeat_password_input"
                app:layout_constraintTop_toBottomOf="@+id/repeat_password_input" />

            <TextView
                android:id="@+id/redirect_to_login"
                style="@style/default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_40"
                android:text="@string/redirect_to_sign_in"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>