<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/head_ellipse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/head_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_list_title"
        app:layout_constraintBottom_toBottomOf="@+id/head_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/head_ellipse"
        app:layout_constraintStart_toStartOf="@+id/head_ellipse"
        app:layout_constraintTop_toTopOf="@+id/head_ellipse" />

    <EditText
        android:id="@+id/et_search_book"
        style="@style/edit_text_hint"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_48"
        android:background="@drawable/round_rectangle_shape"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/book_list_edit_text_hint"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="@+id/head_ellipse"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/head_ellipse" />

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"
        android:src="@drawable/ic_cancel"
        android:layout_marginEnd="@dimen/margin_7"
        app:layout_constraintBottom_toBottomOf="@+id/et_search_book"
        app:layout_constraintEnd_toEndOf="@+id/et_search_book"
        app:layout_constraintTop_toTopOf="@+id/et_search_book" />

    <ImageView
        android:id="@+id/default_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:src="@drawable/ic_bookmark_add"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/default_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/default_text"
        style="@style/default_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/book_list_default"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/head_ellipse" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_books_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/et_search_book" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_books_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/et_search_book" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>